try to fix images not showing on projects page

--- a/_sass/_buttons.scss
+++ b/_sass/_buttons.scss
@@ -156,9 +156,9 @@
     font-size: $type-size-7;
   }
   
-  /* research page buttons */
+  /* projects page buttons */
   
-  &--research {
+  &--projects {
     display: inline-block;
     margin-bottom: 0.25em;
     padding: 0.125em 0.25em;
